# Research-Project

./: .gitignore  pyproject.toml
Project/: ReseachAnlyzes.ipynb  Xiriirka ka dhaxeya baraha bulshada iyo amniga.xlsx  cleaned_data_transformed_with_special_columns_no_inplace.xlsx
