[project]
name = "research-project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mhbaando", email = "maxamuudyare21@gmail.com"},
]
dependencies = ["notebook>=7.4.2", "pandas>=2.2.3", "matplotlib>=3.10.3", "seaborn>=0.13.2", "statsmodels>=0.14.4", "scipy>=1.15.3", "openpyxl>=3.1.5", "arabic-reshaper>=3.0.0", "python-bidi>=0.6.6", "plotly>=6.0.1", "tools>=1.0.2", "qgrid>=1.3.1", "ipywidgets>=8.1.7", "jupyter-contrib-nbextensions>=0.7.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
